--- a/eye.html
+++ b/eye.html
@@ -24,7 +24,11 @@
         <h1>How does the human eye work?</h1>
         <img src="https://images.ctfassets.net/u4vv676b8z52/3EEHqBUTHts5Cx52uy2UP7/ab761a14fd65b921062b8691b54f3f80/eye-anatomy-700x635.jpg?fm=jpg&q=80">
         <p class="eye-p">
-            The most crucial parts of the human eyes are: the pupil, 
+            The most crucial parts of the human eyes are: the pupil, the cornea, the lens, 
+            the iris, and most important of important, the retina and optical nerves. These
+            six parts of the eye are the most crucial parts becuase as one leads to another and 
+            in the end, the retina, these six parts allows us to see what's in front of us with
+            all the 
         </p>
         <button onclick="back()">Back(Introduction)</button>
     </body>
