--- a/eye.html
+++ b/eye.html
@@ -27,9 +27,19 @@
             The most crucial parts of the human eyes are: the pupil, the cornea, the lens, 
             the iris, and most important of important, the retina and optical nerves. These
             six parts of the eye are the most crucial parts becuase as one leads to another and 
-            in the end, the retina, these six parts allows us to see what's in front of us with
-            all the 
+            in the end, the retina, these six parts allows us to see what's in front of us.
+            It all starts at the cornea. When the light that is reflected off an object reaches
+            the cornea, it is redirected into the pupil. (The pupil is the hole in middle of the
+            iris). From the pupil, the light goes through the lens which then redirects the light
+            to hit all the ritina that cover the entire back of the eyeball. The retina is covered
+            in millions of light sensitive cells called rods and cones. They are what help us 
+            detect light. When the light reaches the retina, the rods and cones detect the light
+            particles, they send optical signals to the brain through the optical nerves. When 
+            the signals reach the brain, the brain creates the image and lets us see all that we 
+            see in front of us. The process is much more complex and consists of more parts of our
+            eye, but this the most basic way of explaining it.
         </p>
-        <button onclick="back()">Back(Introduction)</button>
+        <button onclick="back()">Back(Introduction)</button> 
+        <button onclick="next()">Next(Module)</button>
     </body>
 </html>
