--- a/eye.html
+++ b/eye.html
@@ -2,8 +2,7 @@
 <html>
     <head>
         <title>Light</title>
-        <link rel="stylesheet" href="all.css">
-        <link rel="stylesheet" href="eye.css">
+        <link rel="stylesheet" href="main.css">
         <script src="eye.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
     </head>
