--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Documentary: Fake Constellations</title>
-        <link rel="stylesheet" href="all.css">
+        <link rel="stylesheet" href="main.css">
         <script src="home.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
     </head>
