--- a/1.1.html
+++ b/1.1.html
@@ -3,7 +3,7 @@
     <head>
         <title>Light</title>
         <link rel="stylesheet" href="main.css">
-        <script src="eye.js"></script>
+        <script src="1.1.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
     </head>
     <style>
