--- a/module.html
+++ b/module.html
@@ -54,5 +54,8 @@
         <p>
             2. Transfering diagrams from plain paper to graph.
         </p>
+        <p>
+            3.Maximize amount of text and diagrams.
+        </p>
     </body>
 </html>
