--- a/module.html
+++ b/module.html
@@ -44,7 +44,7 @@
             Chapter 1.2: Distance and movement Part 2
         </p>
         <hr>
-        <h1>Help! -Sandhya; to: Mrs.Goodwin and Shreyas</h1>
+        <h1>Help! -Sandhya; to: Anyone helping with the project</h1>
         <label>
             Please help me in these areas.
         </label>
