--- a/1.1.html
+++ b/1.1.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Light</title>
+        <title>Chapter 1.1: Distance and Movement</title>
         <link rel="stylesheet" href="main.css">
         <script src="1.1.js"></script>
+        <link rel="icon" href="constellations.jpeg" type="image/icon type">
         <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
     </head>
     <style>
@@ -24,7 +25,7 @@
     <body>
         <h1>Chapter 1.1</h1>
         <h2>Distance and Movement: Part 1</h1>
-        <img src="https://images.ctfassets.net/u4vv676b8z52/3EEHqBUTHts5Cx52uy2UP7/ab761a14fd65b921062b8691b54f3f80/eye-anatomy-700x635.jpg?fm=jpg&q=80">
+        <img src="Reference.jpg">
         <p class="eye-p">
 
         </p>
