--- a/eye.html
+++ b/eye.html
@@ -4,6 +4,7 @@
         <title>Light</title>
         <link rel="stylesheet" href="main.css">
         <script src="eye.js"></script>
+        <link rel="icon" href="light.png" type="image/icon type">
         <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
     </head>
     <style>
