--- a/1.1.html
+++ b/1.1.html
@@ -18,17 +18,48 @@
             border-color:  #3b995a;
             border-radius: 30px;
             padding: 20px;  
-            background: linear-gradient(deepskyblue 0%, red 50%, #00ff7f 100%) !important;
+            background: linear-gradient(deepskyblue 0%,#00ff7f 100%) !important;
             text-align: center;
+        }
+        p {
+            color: red !important;
+        }
+        button {
+            margin-top: 30px;
         }
     </style>
     <body>
         <h1>Chapter 1.1</h1>
-        <h2>Distance and Movement: Part 1</h1>
+        <h2>Distance and Movement: Part 1</h2>
+        <h3>Reference Diagram</h3>
         <img src="Reference.jpg">
+        <br>
+        <label>You will have to zoom in to understand what is written. If you can't understand
+            what is written, it is typed below.
+        </label>
+        <h1>Reference notes a. (left)</h1>
         <p class="eye-p">
-
+            <input type="radio">
+            Colors are for representing each star as bullet point, number or light.
         </p>
+        <p>
+            <input type="radio">
+            In order to represent all stars, use <img src="Stars.png" style="height: min-content; border: none !important; margin-bottom: -23px;">
+        </p>
+        <p>
+            <input type="radio">
+            In order to represent Earth, use <img src="Earth.png" style="height: min-content; border: none !important; margin-bottom: -23px;">
+        </p>
+        <p>
+            <input type="radio">
+            Distances on diagram are from Earth to star, only when drawing diagrams, they are star to star.
+        </p>
+        <h1>Reference Notes b. (right)</h1>
+        Not needed to explain. Only thing is to use 180 degree protractor and that distances are
+        not exact on any of the diagrams.
+        <h3>Diagram 1</h3>
+        <img src="Diagram 1.jpg">
+        <br>
         <button onclick="back()">Back(Module)</button> 
         <button onclick="next()">Next(Chapter 1.2)</button>
     </body>
