--- a/1.1.html
+++ b/1.1.html
@@ -18,7 +18,7 @@
             border-color:  #3b995a;
             border-radius: 30px;
             padding: 20px;  
-            background: linear-gradient(deepskyblue 0%,#00ff7f 100%) !important;
+            background: linear-gradient(deepskyblue 0%,#f0ff40 50%, #00ff7f 100%) !important;
             text-align: center;
         }
         p {
@@ -55,10 +55,29 @@
             Distances on diagram are from Earth to star, only when drawing diagrams, they are star to star.
         </p>
         <h1>Reference Notes b. (right)</h1>
-        Not needed to explain. Only thing is to use 180 degree protractor and that distances are
-        not exact on any of the diagrams.
+        Not needed to explain. Only things are: distances are
+        not exact on any of the diagrams and in order to make things go faster, we are using made up distances and star movement in context of movement speed of stars moving throughout space.
+        <hr>
         <h3>Diagram 1</h3>
         <img src="Diagram 1.jpg">
+        <br>
+        <p>
+            At any point of the explanations of every diagram, Regulus's light is always 2 (light)
+            years closer to the Earth than Vega's. In this diagram, both Vega's and Regulus's 
+            light traveled approximately 1/15 of one light year. One light is the avergae amount of
+            distance light travels in one Earth year. That is approximately 24.35 days on Earth.
+            Our scenario is that every star as well as the Earth all formed at the same time and
+            all stars released light at the same time. it has been 24.35 days since the formation
+            happened and the only star we se as of now is the Sun. 
+        </p>
+        <hr>
+        <h3>Diagram 2</h3>
+        <img src="Diagram 2.jpg">
+        <br>
+        <p>
+            The light from both stars has traveled 2/15 of one light year. This is equivalent to
+            48.70 days on Earth.
+        </p>
         <br>
         <button onclick="back()">Back(Module)</button> 
         <button onclick="next()">Next(Chapter 1.2)</button>
