--- a/1.1.html
+++ b/1.1.html
@@ -78,6 +78,12 @@
             The light from both stars has traveled 2/15 of one light year. This is equivalent to
             48.70 days on Earth.
         </p>
+        <hr>
+        <img src="Diagram 3.jpg">
+        <br>
+        <p>
+            
+        </p>
         <br>
         <button onclick="back()">Back(Module)</button> 
         <button onclick="next()">Next(Chapter 1.2)</button>
