--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         a little of it then. Let's start small and start to get bigger and bigger.
         </p>
         <div>
-            <button class="btn btn-success" onclick=light()>Next Page (The Huuman Eye)</button>
+            <button class="btn btn-success" onclick=light()>Next Page (The Human Eye)</button>
         </div>
     </body>
 </html>
