--- a/module.html
+++ b/module.html
@@ -52,7 +52,7 @@
             another page.
         </label>
         <p>Key: </p>
-        <input type="text" id="key" placeholder="Type key here">
+        <input type="password" id="key" placeholder="Type key here">
         <button onclick="help()">Submit</button>
     </body>
 </html>
