--- a/1.1.html
+++ b/1.1.html
@@ -82,7 +82,8 @@
         <img src="Diagram 3.jpg">
         <br>
         <p>
-            
+            The light is now officially 1/5 of light year through. By now, 74.05 days have past by
+            on Earth. Both stars have moved to be noticeable 
         </p>
         <br>
         <button onclick="back()">Back(Module)</button> 
