--- a/Help.html
+++ b/Help.html
@@ -8,31 +8,11 @@
     <link rel="icon" href="help.png" type="image/icon type">
 </head>
 <body>
-    <div id="output"></div>
-    <button> <a href="module.html"> Back</a></button>
+    <center>
+        <h1>Welcome <label id="name"></label></h1>
+        <div id="output"></div>
+        <button> <a href="module.html"> Back</a></button>
+    </center>
 </body>
-<script>
-    var firebaseConfig = {
-    apiKey: "AIzaSyCaG3h_ucaMzyVlpGXB-6nNSk8eGPkx2rs",
-    authDomain: "constellations-f8f62.firebaseapp.com",
-    databaseURL: "https://constellations-f8f62-default-rtdb.firebaseio.com",
-    projectId: "constellations-f8f62",
-    storageBucket: "constellations-f8f62.appspot.com",
-    messagingSenderId: "918076456711",
-    appId: "1:918076456711:web:ad89d6708c266c69c9cfa2",
-    measurementId: "G-RS6VJFRFWG"
-  };
-  firebase.initializeApp(firebaseConfig);
-    username = localStorage.getItem("user");
-    function getData() { firebase.database().ref("/"+username).on('value', function(snapshot) { document.getElementById("output").innerHTML = ""; 
-    snapshot.forEach(function(childSnapshot) { childKey  = childSnapshot.key; 
-        childData = childSnapshot.val();
-        if(childKey != "purpose") {
-         firebase_message_id = childKey;
-         message_data = childData;
-      console.log(firebase_message_id);
-      console.log(message_data);
-  }
-getData();
-</script>
+<script src="help.js"></script>
 </html>
