--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
         }
     </style>
     <body class="body_main">
-        <h1 id="Heading"> Fake Constellations </h1>
-        <h2 id="subtitle">How are constellations fake? </h2>
+       <center>
+        <marquee class="blue-background" direction="left" scrollmount="10"><h1 class="heading"> Breaking News: Fake Constellations </h1></marquee>
+        <marquee class="green-background" direction="up" scrollmount=".25"><h2 class="subtitle"> How can constellations of all things be FAKE????</h2></marquee>
         <img src="https://earthsky.org/upl/2020/10/ocean-autumn-sky-2020-e1603233723605.png">
         <p>
         Look into the sky at the darkest point of night in an open space without any other light
-        except red light. The stars dotting the night sky are beautiful, aren’t they? The bad
+        except red light. The stars dotting the night sky are beautiful, aren't they? The bad
         news is, the constellations or patterns of those stars are NOT  real. But how are they
         not real? This question is answered through studying light, the human eye and star 
         movement. But that is just the beginning. Outer space is no little thing. There are 
@@ -34,5 +35,6 @@
         <div>
             <button class="btn btn-success" onclick=light()>Next Page (The Human Eye)</button>
         </div>
+       </center>
     </body>
 </html>
