--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </style>
     <body class="body_main">
        <center>
-        <marquee class="blue-background" direction="left" scrollmount="10"><h1 class="heading"> Breaking News: Fake Constellations </h1></marquee>
+        <marquee class="blue-background" direction="left" style="width: 70%;" scrollmount=".25"><h1 class="heading"> Breaking News: Fake Constellations </h1></marquee>
         <marquee class="green-background" direction="up" scrollmount=".25"><h2 class="subtitle"> How can constellations of all things be FAKE????</h2></marquee>
         <img src="https://earthsky.org/upl/2020/10/ocean-autumn-sky-2020-e1603233723605.png">
         <p>
