--- a/module.html
+++ b/module.html
@@ -5,6 +5,9 @@
         <link rel="stylesheet" href="main.css">
         <script src="module.js"></script>
         <link rel="icon" href="Nebulae.jpg" type="image/icon type">
+        <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/live/3.1/firebase.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
     </head>
     <style>
