--- a/Help.html
+++ b/Help.html
@@ -24,13 +24,13 @@
 <body class="body_main">
     <center>
         <h1>Welcome <label id="name"></label></h1>
-        <label>Note: Help page not working. Work in progress. On the other hand, comments section is working. Please leave suggestion or comments in the comment box.</label>
+        <label>Comment section is in progress. Help section working.</label>
+        <br>
+        <label>I need help with: </label>
         <div id="output"></div>
         <hr>
         <h1>Comments and suggestions</h1>
-        <input id="comments">
-        <button type="submit" onclick="add()">Add</button>
-        <div id="comment"></div>
+        <button type="submit" onclick="redirect()">Go to comments and suggestions page.</button>
         <br>
         <button> <a href="module.html"> Back</a></button>
     </center>
