--- a/module.html
+++ b/module.html
@@ -19,8 +19,8 @@
             border-radius: 50px;
             padding: 20px;
         }
-        hr {
-            width: 10%;
+        #hrtag {
+            width: 1200px;
             height: 5px;
             background-color: deeppink;
             border-radius: 1000px;
@@ -47,7 +47,7 @@
         <p>
             Chapter 1.2: Distance and movement Part 2
         </p>
-        <hr>
+        <hr id="hrtag">
         <h1>Help! -Sandhya; to: Anyone helping with the project</h1>
         <label id="directions">
             Please type key given by website owner to go to page. If entered key doesn't exist,
