--- a/Help.html
+++ b/Help.html
@@ -24,7 +24,7 @@
 <body class="body_main">
     <center>
         <h1>Welcome <label id="name"></label></h1>
-        <label>Comment section is in progress. Help section working.</label>
+        <label>Comment section is complete. Help section working. For comment section, please make sure you insert your name without any special characters to make it easier for me to know the suggestions. For the room names as well, until unknown problem is fixed, please use the same room name as the username. To prevent confusion, please use the key given by Sandhya for both roomname and username.</label>
         <br>
         <label>I need help with: </label>
         <div id="output"></div>
