--- a/Help.html
+++ b/Help.html
@@ -26,13 +26,15 @@
         <h1>Welcome <label id="name"></label></h1>
         <label>Comment section is complete. Help section working. For comment section, please make sure you insert your name without any special characters to make it easier for me to know the suggestions. For the room names as well, until unknown problem is fixed, please use the same room name as the username. To prevent confusion, please use the key given by Sandhya for both roomname and username.</label>
         <br>
+        <label>Even when rooms for suggestion and comments have been created, they will not show up on the home screen. Please use your name as the roomname.</label>
+        <br>
         <label>I need help with: </label>
         <div id="output"></div>
         <hr>
         <h1>Comments and suggestions</h1>
         <button type="submit" onclick="redirect()">Go to comments and suggestions page.</button>
         <br>
-        <button> <a href="module.html"> Back</a></button>
+        <button> <a href="https://academyoffice79.github.io/Constellations/login.html"> Back</a></button>
     </center>
 </body>
 <script src="help.js"></script>
