--- a/Help.html
+++ b/Help.html
@@ -34,7 +34,7 @@
         <h1>Comments and suggestions</h1>
         <button type="submit" onclick="redirect()">Go to comments and suggestions page.</button>
         <br>
-        <button> <a href="https://academyoffice79.github.io/Constellations/login.html"> Back</a></button>
+        <button> <a href="module.html"> Back</a></button>
     </center>
 </body>
 <script src="help.js"></script>
